 cnp-block-stig-v-230504-firewall-default-deny-all-allow-by-exception-jk334pu.yaml
---
# STIG reference https://www.stigviewer.com/stig/red_hat_enterprise_linux_8/2021-03-04/finding/V-230504

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-block-stig-v-230504-firewall-default-deny-all-allow-by-exception-vcnckxa
  namespace: kube-system
spec:
  description: "An RHEL firewall to employ a deny-all, allow-by-exception policy for allowing connections to other systems."
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
      pod-template-hash: 599484b884
  ingress:
    - {}             #default ingress deny
  egress:            #egress allow-by-exception 
    - toEndpoints:
        - matchLabels:
            app: rhel   #change pod label to allow connection
      toPorts:
        - ports:
            - port: "80"  #change port to match your port
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
